remove superfluous verbage

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 				<div class='indent'>
 					<div>
 						<h2>
-							<span style='font-size:10rem; line-height:7rem'>Hi,</span> I'm a self-taught<br/>full-stack developer interested in<br/> a junior dev position, internship, or any similitude.
+							<span style='font-size:10rem; line-height:7rem'>Hi,</span> I'm a self-taught<br/>full-stack developer currently<br/>
+							residing in the East Coast.
 
 						</h2>
 					</div>
@@ -92,7 +93,7 @@
 
 					<div>
 						<p>
-							I recently completed the full-stack nanodegree program at Udacity. I primarily write in Python and develop web applications with Flask and the SQLAlchemy ORM. The primary goal of my projects was to develop a web app that integrates crucial web technologies: relational databases, authentication and authorization of registered users, user experience (front-end development), and configuration of servers for app deployment.
+							I primarily write in Python and develop web applications with Flask and the SQLAlchemy ORM. The primary goal of my projects was to develop a web app that integrates crucial web technologies: relational databases, authentication and authorization of registered users, user experience (front-end development), and configuration of servers for app deployment.
 						</p>
 
 						<div class='align-container' style='padding-top: 8rem;'>
