--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 					<div>
 						<p>
-							I primarily write in Python and develop web applications with Flask and the SQLAlchemy ORM. The primary goal of my projects was to develop a web app that integrates crucial web technologies: relational databases, authentication and authorization of registered users, user experience (front-end development), and configuration of servers for app deployment.
+							My primary languages are Python and JavaScript/NodeJS and I have a working knowledge of Java. I develop web applications with either Node plus the Express framework or develop with the Python-based Flask framework plus the SQLAlchemy ORM. As a full-stack developer, I'm always learning new technology, and trying to old problems with new (and more efficient) methods.
 						</p>
 
 						<div class='align-container' style='padding-top: 8rem;'>
@@ -101,15 +101,17 @@
 								Primary Skillset:
 								<ul>
 									<li>Python</li>
+									<li>NodeJS</li>
 									<li>JavaScript</li>
 									<li>HTML/CSS</li>
-									<li>Flask/Jinja2</li>
+									<li>Flask/Jinja2 Framework</li>
+									<li>Express.js Framework</li>
 									<li>SQLAlchemy</li>
 									<li>Bootstrap 3</li>
 									<li>PostgreSQL</li>
+									<li>Java</li>
 									<li>OAuth2</li>
 									<li>Linux/Linux server configuration</li>
-									<li>Google App Engine</li>
 									<li>Git/GitHub</li>
 								</ul>
 							</div>
@@ -206,11 +208,11 @@
 				<div class='indent'>
 					<h1>Contact</h1>
 					<div class='text-center' style='padding:2.5rem;'>
-						I currently reside in the East Coast. Email is the best way to reach me.
+						I currently reside in the Virgina/Maryland area -- the Silicon Valley of the East Coast. Email is the best way to reach me.
 					</div>
 					<div>
 						<p class='text-center'>
-							<a href="mailto:deereddy@yandex.com" target="_top" class='contact-links'>
+							<a href="mailto:d.reddy@yandex.com" target="_top" class='contact-links'>
 								<i class='fa fa-envelope-o'></i>
 							</a>
 
