style: Change sections to HTML5 semantic structure

--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico"> 
 
-	<!-- Font Awesome -->
+	<!-- Font Awesome CDN -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 	<!-- Bootstrap CDN -->
 	<link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
+	<!-- JQuery CDN -->
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+
 	<!-- Custom CSS -->
 	<link rel='stylesheet' type='text/css' href='static/styles.css'>
-
-	<!-- JQuery -->
-	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
 	<!-- Custom JS -->
 	<script src='static/scripts.js'></script>
@@ -32,7 +31,7 @@
 <div class='container-fluid box'>
 
 	<!-- Nav bar -->
-	<div class='row center-menu'>
+	<nav class='row center-menu'>
 		<div class='drop-menu'>
 			<div class='col-xs-4 children-v-align'>
 				<img src='static/img/logo_alt.png' alt='logo'>
@@ -47,7 +46,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</nav>
 
 	<!-- Main -->
 	<div class='row'>
@@ -199,7 +198,7 @@
 
 
 		<!-- Contact -->
-		<section id='contact' style='height:70vh;' data-type="background" data-speed="10">
+		<footer id='contact' style='height:70vh;' data-type="background" data-speed="10">
 			<a id='contact'></a>
 			<div class='bottom-pic'>
 				<img src='static/img/avatar2.png' alt='avatar'>
@@ -227,7 +226,7 @@
 					
 				</div>
 			</article>
-		</section>
+		</footer>
 
 	</div>
 </div>
