--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	</nav>
 
 	<!-- Main -->
-	<div class='row'>
+	<main class='row'>
 
 		<!-- Home/Intro -->
 		<section id='home' class='full-height' data-type="background" data-speed="10">
@@ -228,7 +228,7 @@
 			</article>
 		</footer>
 
-	</div>
+	</main>
 </div>
 </body>
 </html>
