fix: Update links

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<div class='align-container'>
 
 						<div class='portfolio-item inline'>
-							<a href='https://github.com/Ogodei/Image-Sharing-App' target='_blank'>
+							<a href='https://github.com/Deesus/Image-Sharing-App' target='_blank'>
 								<figure>								
 									<img src='static/img/p3.jpg'>							
 									<figcaption>
@@ -144,7 +144,7 @@
 						</div>
 
 						<div class='portfolio-item inline'>
-							<a href='https://github.com/Ogodei/Movie-Trailer-Website' target='_blank'>
+							<a href='https://github.com/Deesus/Movie-Trailer-Website' target='_blank'>
 								<figure>								
 									<img src='static/img/p1.jpg'>
 									<figcaption>
@@ -155,7 +155,7 @@
 						</div>
 
 						<div class='portfolio-item inline'>
-							<a href='https://github.com/Ogodei/Conference-Central' target='_blank'>
+							<a href='https://github.com/Deesus/Conference-Central' target='_blank'>
 								<figure>
 									<img src='static/img/p4.jpg'>							
 									<figcaption>
@@ -170,7 +170,7 @@
 					<!-- portfolio tiles - row 2 -->
 					<div class='align-container'>
 						<div class='portfolio-item inline'>
-							<a href='https://github.com/Ogodei/Swiss-Tournament-Planner' target='_blank'>
+							<a href='https://github.com/Deesus/Swiss-Tournament-Planner' target='_blank'>
 								<figure>								
 									<img src='static/img/p2.jpg'>
 									<figcaption>
@@ -181,7 +181,7 @@
 						</div>
 
 						<div class='portfolio-item inline'>
-							<a href='https://github.com/Ogodei/Linux-Server-Configuration' target='_blank'>
+							<a href='https://github.com/Deesus/Linux-Server-Configuration' target='_blank'>
 								<figure>								
 										<img src='static/img/p5.jpg'>							
 									<figcaption>
@@ -215,10 +215,10 @@
 								<i class='fa fa-envelope-o'></i>
 							</a>
 
-							<a href="https://github.com/Ogodei" target="_blank" class='contact-links'>
+							<a href="https://github.com/deesus" target="_blank" class='contact-links'>
 								<i class='fa fa-github-square'></i>
 							</a>
-							<a href="https://www.linkedin.com/pub/dee-reddy/103/3b5/626" target="_blank" class='contact-links'>
+							<a href="https://www.linkedin.com/in/deesus" target="_blank" class='contact-links'>
 								<i class='fa fa-linkedin-square'></i>
 							</a>
 						</p>
