--- a/index.html
+++ b/index.html
@@ -17,14 +17,8 @@
 	<!-- Bootstrap CDN -->
 	<link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
-	<!-- JQuery CDN -->
-	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-
 	<!-- Custom CSS -->
 	<link rel='stylesheet' type='text/css' href='static/styles.css'>
-
-	<!-- Custom JS -->
-	<script src='static/scripts.js'></script>
 </head>
 
 <body>
@@ -207,11 +201,11 @@
 				<div class='indent'>
 					<h1>Contact</h1>
 					<div class='text-center' style='padding:2.5rem;'>
-						I currently reside in the Virgina/Maryland area -- the Silicon Valley of the East Coast. Email is the best way to reach me.
+						I currently reside in the Virgina/Maryland area -- the Silicon Valley of the East Coast. For business inquiries, LinkedIn is the best way to contact me.
 					</div>
 					<div>
 						<p class='text-center'>
-							<a href="mailto:d.reddy@yandex.com" target="_top" class='contact-links'>
+							<a href="mailto:deesus@yandex.com" target="_top" class='contact-links'>
 								<i class='fa fa-envelope-o'></i>
 							</a>
 
@@ -230,5 +224,9 @@
 
 	</main>
 </div>
+	<!-- JQuery CDN -->
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<!-- Custom JS -->
+	<script src='static/scripts.js'></script>
 </body>
 </html>
