--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 					<div>
 						<p>
-							My primary languages are Python and JavaScript/NodeJS and I have a working knowledge of Java. I develop web applications with either Node plus the Express framework or develop with the Python-based Flask framework plus the SQLAlchemy ORM. As a full-stack developer, I'm always learning new technology, and trying to old problems with new (and more efficient) methods.
+							My primary languages are Python and JavaScript/NodeJS and I have a working knowledge of Java. I develop web applications with either Node/Express or develop with the Python-based Flask framework (plus the SQLAlchemy ORM). As a full-stack developer, I'm always learning new technologies, and trying to solve old problems with new (and more efficient) methods.
 						</p>
 
 						<div class='align-container' style='padding-top: 8rem;'>
@@ -96,6 +96,7 @@
 									<li>Python</li>
 									<li>NodeJS</li>
 									<li>JavaScript</li>
+									<li>JQuery</li>
 									<li>HTML/CSS</li>
 									<li>Flask/Jinja2 Framework</li>
 									<li>Express.js Framework</li>
