feat: Add COUCH to projects

--- a/index.html
+++ b/index.html
@@ -173,20 +173,31 @@
 									</figcaption>
 								</figure>
 							</a>
-						</div>
+						</div> <!-- /.portfolio-item inline -->
 
 						<div class='portfolio-item inline'>
 							<a href='https://github.com/Deesus/Linux-Server-Configuration' target='_blank'>
 								<figure>								
-										<img src='static/img/p5.jpg'>							
+									<img src='static/img/p5.jpg'>							
 									<figcaption>
 										<span>Linux Server Configuration:</span> A baseline installation and configuration of a Linux/Unix distribution on a virtual machine.
 									</figcaption>
 								</figure>
 							</a>
-						</div>
+						</div> <!-- /.portfolio-item inline -->
 
-					</div>
+						<div class='portfolio-item inline'>
+							<a href='static/img/couch_ss.png' target='_blank'>
+								<figure>								
+									<img src='static/img/p6.png'>							
+									<figcaption>
+										<span>COUCH website:</span> The former website for COUCH (couchcoop.org). The site informed users about the organization as well as latest news. Featured a simple HTML form (PHP back-end).
+									</figcaption>
+								</figure>
+							</a>
+						</div> <!-- /.portfolio-item inline -->
+
+					</div> <!-- /.align-container -->
 				</div>
 			</article>
 		</section>
