--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
 	<!-- Custom CSS -->
-	<link rel='stylesheet' type='text/css' href='static/styles.css'>
+	<link rel='stylesheet' type='text/css' href='static/stylesheets/styles.css'>
 </head>
 
 <body>
@@ -239,6 +239,6 @@
 	<!-- JQuery CDN -->
 	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<!-- Custom JS -->
-	<script src='static/scripts.js'></script>
+	<script src='static/scripts/scripts.js'></script>
 </body>
 </html>
