style: Fix duplicate ID attribute. Add missing closing tag.

--- a/index.html
+++ b/index.html
@@ -1,244 +1,245 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Metadata -->
-	<title>Dee Reddy</title>
-	<meta name="description" content="Dee Reddy Portfolio">
-	<meta name="keywords" content="Dee, Reddy, Dee Reddy">
-	<meta name="author" content="Dee Reddy">
-	<meta charset="UTF-8">
+    <!-- Metadata -->
+    <title>Dee Reddy</title>
+    <meta name="description" content="Dee Reddy Portfolio">
+    <meta name="keywords" content="Dee, Reddy, Dee Reddy">
+    <meta name="author" content="Dee Reddy">
+    <meta charset="UTF-8">
 
-	<!-- favicon -->
-	<link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico"> 
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico">
 
-	<!-- Font Awesome CDN -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-	<!-- Bootstrap CDN -->
-	<link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+    <!-- Bootstrap CDN -->
+    <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
-	<!-- Custom CSS -->
-	<link rel='stylesheet' type='text/css' href='static/stylesheets/styles.css'>
+    <!-- Custom CSS -->
+    <link rel='stylesheet' type='text/css' href='static/stylesheets/styles.css'>
 </head>
 
 <body>
 <div class='container-fluid box'>
 
-	<!-- Nav bar -->
-	<nav class='row center-menu'>
-		<div class='drop-menu'>
-			<div class='col-xs-4 children-v-align'>
-				<img src='static/img/logo_alt.png' alt='logo'>
-				Dee Reddy
-			</div>
-			<div class='col-xs-8 text-right children-v-align'>
-				<ul>
-					<li><a href="#home" class='a-green'>home</a></li>
-					<li><a href="#about" class='a-red'>about</a></li>
-					<li><a href="#portfolio" class='a-yellow'>portfolio</a></li>
-					<li><a href="#contact" class='a-orange'>contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+    <!-- Nav bar -->
+    <nav class='row center-menu'>
+        <div class='drop-menu'>
+            <div class='col-xs-4 children-v-align'>
+                <img src='static/img/logo_alt.png' alt='logo'>
+                Dee Reddy
+            </div>
+            <div class='col-xs-8 text-right children-v-align'>
+                <ul>
+                    <li><a href="#home" class='a-green'>home</a></li>
+                    <li><a href="#about" class='a-red'>about</a></li>
+                    <li><a href="#portfolio" class='a-yellow'>portfolio</a></li>
+                    <li><a href="#contact" class='a-orange'>contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-	<!-- Main -->
-	<main class='row'>
+    <!-- Main -->
+    <main class='row'>
 
-		<!-- Home/Intro -->
-		<section id='home' class='full-height' data-type="background" data-speed="10">
-			<a id='home'></a>
-			<article class='col-xs-12'>
+        <!-- Home/Intro -->
+        <section id='home' class='full-height' data-type="background" data-speed="10">
+            <a class='home'></a>
+            <article class='col-xs-12'>
 
-				<div class='indent'>
-					<div>
-						<h2>
-							<span style='font-size:10rem; line-height:7rem'>Hi,</span> I'm a self-taught<br/>full-stack developer currently<br/>
-							residing in the East Coast.
+                <div class='indent'>
+                    <div>
+                        <h2>
+                            <span style='font-size:10rem; line-height:7rem'>Hi,</span> I'm a self-taught<br/>full-stack developer currently<br/>
+                            residing in the East Coast.
 
-						</h2>
-					</div>
-					<!-- home-links -->
-					<div class='home-links-container align-container'>
-						<div>
-							<a href="#about"><span class='yellow'>{</span> about <span class='yellow'>}</span></a>
-						</div>
+                        </h2>
+                    </div>
+                    <!-- home-links -->
+                    <div class='home-links-container align-container'>
+                        <div>
+                            <a href="#about"><span class='yellow'>{</span> about <span class='yellow'>}</span></a>
+                        </div>
 
-						<div>
-							<a href="#portfolio"><span class='yellow'>{</span> portfolio <span class='yellow'>}</span></a>
-						</div>
+                        <div>
+                            <a href="#portfolio"><span class='yellow'>{</span> portfolio <span class='yellow'>}</span></a>
+                        </div>
 
-						<div>
-							<a href="#contact"><span class='yellow'>{</span> contact <span class='yellow'>}</span></a>
-						</div>
-					</div>
-				</div>
-			</article>
-		</section>
+                        <div>
+                            <a href="#contact"><span class='yellow'>{</span> contact <span class='yellow'>}</span></a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
 
-		<!-- About -->
-		<section id='about' class='full-height shadow' data-type="background" data-speed="10">
-			<a id='about'></a>
-			<article class='col-xs-12'>
+        <!-- About -->
+        <section id='about' class='full-height shadow' data-type="background" data-speed="10">
+            <a class='about'></a>
+            <article class='col-xs-12'>
 
-				<div class='indent'>
-					<h1>About</h1>
+                <div class='indent'>
+                    <h1>About</h1>
 
-					<div>
-						<p>
-							My primary languages are Python and JavaScript/NodeJS and I have a working knowledge of Java. I develop web applications with either Node/Express or develop with the Python-based Flask framework (plus the SQLAlchemy ORM). As a full-stack developer, I'm always learning new technologies, and trying to solve old problems with new (and more efficient) methods.
-						</p>
+                    <div>
+                        <p>
+                            My primary languages are Python and JavaScript/NodeJS and I have a working knowledge of Java. I develop web applications with either Node/Express or develop with the Python-based Flask framework (plus the SQLAlchemy ORM). As a full-stack developer, I'm always learning new technologies, and trying to solve old problems with new (and more efficient) methods.
+                        </p>
 
-						<div class='align-container' style='padding-top: 8rem;'>
-							<div class='inline'>
-								Primary Skillset:
-								<ul>
-									<li>Python</li>
-									<li>NodeJS</li>
-									<li>JavaScript</li>
-									<li>JQuery</li>
-									<li>HTML/CSS</li>
-									<li>Flask/Jinja2 Framework</li>
-									<li>Express.js Framework</li>
-									<li>SQLAlchemy</li>
-									<li>Bootstrap 3</li>
-									<li>PostgreSQL</li>
-									<li>Java</li>
-									<li>OAuth2</li>
-									<li>Linux/Linux server configuration</li>
-									<li>Git/GitHub</li>
-								</ul>
-							</div>
-							<div class='inline'>
-								<img src="static/img/circle_expertise.png" alt='cirlce of expertise'>
-							</div>
-						</div>
-				</div>
-			</article>
-		</section>
-
-
-		<!-- Portfolio -->
-		<section id='portfolio' class='full-height' data-type="background" data-speed="10">
-			<a id='portfolio'></a>
-			<article class='col-xs-12'>
-				<div class='indent'>
-					<h1>Portfolio</h1>
-					<!-- portfolio tiles - row 1 -->
-					<div class='align-container'>
-
-						<div class='portfolio-item inline'>
-							<a href='https://github.com/Deesus/Image-Sharing-App' target='_blank'>
-								<figure>								
-									<img src='static/img/p3.jpg'>							
-									<figcaption>
-										<span>Flask App -- image sharing app:</span> Users can upload images onto the app's database (PostgreSQL). Employs OAuth2 so users can securely log into their profiles and create/edit/delete albums.
-									</figcaption>
-								</figure>
-							</a>
-						</div>
-
-						<div class='portfolio-item inline'>
-							<a href='https://github.com/Deesus/Movie-Trailer-Website' target='_blank'>
-								<figure>								
-									<img src='static/img/p1.jpg'>
-									<figcaption>
-										<span>Movie Trailer App:</span> Made from Bootstrap 3 and Python.
-									</figcaption>
-								</figure>
-							</a>
-						</div>
-
-						<div class='portfolio-item inline'>
-							<a href='https://github.com/Deesus/Conference-Central' target='_blank'>
-								<figure>
-									<img src='static/img/p4.jpg'>							
-									<figcaption>
-										<span>Google App Engine -- conference organization app:</span> Back-end development, extenuation, and deployment of a conference scheduling app onto the Google cloud.
-									</figcaption>
-								</figure>
-							</a>
-						</div>
-
-					</div>
-
-					<!-- portfolio tiles - row 2 -->
-					<div class='align-container'>
-						<div class='portfolio-item inline'>
-							<a href='https://github.com/Deesus/Swiss-Tournament-Planner' target='_blank'>
-								<figure>								
-									<img src='static/img/p2.jpg'>
-									<figcaption>
-										<span>Tournament Scheduling Module:</span> A Python module and database schema that schedules player pairings in a Swiss-system tournament.
-									</figcaption>
-								</figure>
-							</a>
-						</div> <!-- /.portfolio-item inline -->
-
-						<div class='portfolio-item inline'>
-							<a href='https://github.com/Deesus/Linux-Server-Configuration' target='_blank'>
-								<figure>								
-									<img src='static/img/p5.jpg'>							
-									<figcaption>
-										<span>Linux Server Configuration:</span> A baseline installation and configuration of a Linux/Unix distribution on a virtual machine.
-									</figcaption>
-								</figure>
-							</a>
-						</div> <!-- /.portfolio-item inline -->
-
-						<div class='portfolio-item inline'>
-							<a href='static/img/couch_ss.png' target='_blank'>
-								<figure>								
-									<img src='static/img/p6.png'>							
-									<figcaption>
-										<span>COUCH website:</span> The former website for COUCH (couchcoop.org). The site informed users about the organization as well as latest news. Featured a simple HTML form (PHP back-end).
-									</figcaption>
-								</figure>
-							</a>
-						</div> <!-- /.portfolio-item inline -->
-
-					</div> <!-- /.align-container -->
-				</div>
-			</article>
-		</section>
+                        <div class='align-container' style='padding-top: 8rem;'>
+                            <div class='inline'>
+                                Primary Skillset:
+                                <ul>
+                                    <li>Python</li>
+                                    <li>NodeJS</li>
+                                    <li>JavaScript</li>
+                                    <li>JQuery</li>
+                                    <li>HTML/CSS</li>
+                                    <li>Flask/Jinja2 Framework</li>
+                                    <li>Express.js Framework</li>
+                                    <li>SQLAlchemy</li>
+                                    <li>Bootstrap 3</li>
+                                    <li>PostgreSQL</li>
+                                    <li>Java</li>
+                                    <li>OAuth2</li>
+                                    <li>Linux/Linux server configuration</li>
+                                    <li>Git/GitHub</li>
+                                </ul>
+                            </div>
+                            <div class='inline'>
+                                <img src="static/img/circle_expertise.png" alt='cirlce of expertise'>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
 
 
-		<!-- Contact -->
-		<footer id='contact' style='height:70vh;' data-type="background" data-speed="10">
-			<a id='contact'></a>
-			<div class='bottom-pic'>
-				<img src='static/img/avatar2.png' alt='avatar'>
-			</div>
-			<article class='col-xs-12'>
-				<div class='indent'>
-					<h1>Contact</h1>
-					<div class='text-center' style='padding:2.5rem;'>
-						I currently reside in the Virgina/Maryland area -- the Silicon Valley of the East Coast. For business inquiries, LinkedIn is the best way to contact me.
-					</div>
-					<div>
-						<p class='text-center'>
-							<a href="mailto:deesus@yandex.com" target="_top" class='contact-links'>
-								<i class='fa fa-envelope-o'></i>
-							</a>
+        <!-- Portfolio -->
+        <section id='portfolio' class='full-height' data-type="background" data-speed="10">
+            <a class='portfolio'></a>
+            <article class='col-xs-12'>
+                <div class='indent'>
+                    <h1>Portfolio</h1>
+                    <!-- portfolio tiles - row 1 -->
+                    <div class='align-container'>
 
-							<a href="https://github.com/deesus" target="_blank" class='contact-links'>
-								<i class='fa fa-github-square'></i>
-							</a>
-							<a href="https://www.linkedin.com/in/deesus" target="_blank" class='contact-links'>
-								<i class='fa fa-linkedin-square'></i>
-							</a>
-						</p>
-					</div>
-					
-				</div>
-			</article>
-		</footer>
+                        <div class='portfolio-item inline'>
+                            <a href='https://github.com/Deesus/Image-Sharing-App' target='_blank'>
+                                <figure>
+                                    <img src='static/img/p3.jpg'>
+                                    <figcaption>
+                                        <span>Flask App -- image sharing app:</span> Users can upload images onto the app's database (PostgreSQL). Employs OAuth2 so users can securely log into their profiles and create/edit/delete albums.
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
 
-	</main>
+                        <div class='portfolio-item inline'>
+                            <a href='https://github.com/Deesus/Movie-Trailer-Website' target='_blank'>
+                                <figure>
+                                    <img src='static/img/p1.jpg'>
+                                    <figcaption>
+                                        <span>Movie Trailer App:</span> Made from Bootstrap 3 and Python.
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
+
+                        <div class='portfolio-item inline'>
+                            <a href='https://github.com/Deesus/Conference-Central' target='_blank'>
+                                <figure>
+                                    <img src='static/img/p4.jpg'>
+                                    <figcaption>
+                                        <span>Google App Engine -- conference organization app:</span> Back-end development, extenuation, and deployment of a conference scheduling app onto the Google cloud.
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
+
+                    </div>
+
+                    <!-- portfolio tiles - row 2 -->
+                    <div class='align-container'>
+                        <div class='portfolio-item inline'>
+                            <a href='https://github.com/Deesus/Swiss-Tournament-Planner' target='_blank'>
+                                <figure>
+                                    <img src='static/img/p2.jpg'>
+                                    <figcaption>
+                                        <span>Tournament Scheduling Module:</span> A Python module and database schema that schedules player pairings in a Swiss-system tournament.
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div> <!-- /.portfolio-item inline -->
+
+                        <div class='portfolio-item inline'>
+                            <a href='https://github.com/Deesus/Linux-Server-Configuration' target='_blank'>
+                                <figure>
+                                    <img src='static/img/p5.jpg'>
+                                    <figcaption>
+                                        <span>Linux Server Configuration:</span> A baseline installation and configuration of a Linux/Unix distribution on a virtual machine.
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div> <!-- /.portfolio-item inline -->
+
+                        <div class='portfolio-item inline'>
+                            <a href='static/img/couch_ss.png' target='_blank'>
+                                <figure>
+                                    <img src='static/img/p6.png'>
+                                    <figcaption>
+                                        <span>COUCH website:</span> The former website for COUCH (couchcoop.org). The site informed users about the organization as well as latest news. Featured a simple HTML form (PHP back-end).
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div> <!-- /.portfolio-item inline -->
+
+                    </div> <!-- /.align-container -->
+                </div>
+            </article>
+        </section>
+
+
+        <!-- Contact -->
+        <footer id='contact' style='height:70vh;' data-type="background" data-speed="10">
+            <a class='contact'></a>
+            <div class='bottom-pic'>
+                <img src='static/img/avatar2.png' alt='avatar'>
+            </div>
+            <article class='col-xs-12'>
+                <div class='indent'>
+                    <h1>Contact</h1>
+                    <div class='text-center' style='padding:2.5rem;'>
+                        I currently reside in the Virgina/Maryland area -- the Silicon Valley of the East Coast. For business inquiries, LinkedIn is the best way to contact me.
+                    </div>
+                    <div>
+                        <p class='text-center'>
+                            <a href="mailto:deesus@yandex.com" target="_top" class='contact-links'>
+                                <i class='fa fa-envelope-o'></i>
+                            </a>
+
+                            <a href="https://github.com/deesus" target="_blank" class='contact-links'>
+                                <i class='fa fa-github-square'></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/deesus" target="_blank" class='contact-links'>
+                                <i class='fa fa-linkedin-square'></i>
+                            </a>
+                        </p>
+                    </div>
+
+                </div>
+            </article>
+        </footer>
+
+    </main>
 </div>
-	<!-- JQuery CDN -->
-	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<!-- Custom JS -->
-	<script src='static/scripts/scripts.js'></script>
+<!-- JQuery CDN -->
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<!-- Custom JS -->
+<script src='static/scripts/scripts.js'></script>
 </body>
 </html>
