--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <h1>About</h1>
                             <div>
                                 <p>
-                                    My primary languages are Python and JavaScript/NodeJS and I have a working knowledge of Java. I develop web applications with either Node/Express or develop with the Python-based Flask framework (plus the SQLAlchemy ORM). As a full-stack developer, I'm always learning new technologies, and trying to solve old problems with new (and more efficient) methods.
+                                    My primary languages are Python and JavaScript and I have a working knowledge of Java. I develop web applications with either Node/Express or develop with the Python-based Flask framework (plus the SQLAlchemy ORM). As a full-stack developer, I'm always learning new technologies, and trying to solve old problems with new (and more efficient) methods.
                                 </p>
                                 <div class='align-container' style='padding-top: 8rem;'>
                                     <div class='inline'>
@@ -94,17 +94,16 @@
                                         <ul>
                                             <li>Python</li>
                                             <li>NodeJS</li>
-                                            <li>JavaScript</li>
-                                            <li>JQuery</li>
+                                            <li>JavaScript/jQuery</li>
                                             <li>HTML/CSS</li>
-                                            <li>Flask/Jinja2 Framework</li>
+                                            <li>Flask Framework</li>
                                             <li>Express.js Framework</li>
                                             <li>SQLAlchemy</li>
-                                            <li>Bootstrap 3</li>
-                                            <li>PostgreSQL</li>
+                                            <li>Bootstrap</li>
+                                            <li>SQL</li>
                                             <li>Java</li>
                                             <li>OAuth2</li>
-                                            <li>Linux/Linux server configuration</li>
+                                            <li>Linux</li>
                                             <li>Git/GitHub</li>
                                         </ul>
                                     </div>
