--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                         Primary Skillset:
                                         <ul>
                                             <li>Python</li>
-                                            <li>NodeJS</li>
+                                            <li>Node.js</li>
                                             <li>JavaScript/jQuery</li>
                                             <li>HTML/CSS</li>
                                             <li>Flask Framework</li>
@@ -116,6 +116,7 @@
                     </article>
                 </section>
 
+                <!-- TODO: Add AIAI website -->
                 <!-- Portfolio -->
                 <section id='portfolio' class='full-height' data-type="background" data-speed="10">
                     <a class='portfolio'></a>
