stable: Begin developing pages

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <meta charset="UTF-8">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="src/stylesheets/main.css">
 </head>
 <body>
     <div id="body-wrapper">
-        <header></header>
+        <header>
+            A dead simple, responsive boilerplate.
+        </header>
 
-    </div>
-    <footer></footer>
+    </div> <!-- /#boddy-wrapper -->
+    <footer>
+
+    </footer>
 </body>
 </html>
