feat: Add sections.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,45 @@
 </head>
 <body>
     <div id="body-wrapper">
+        <!-- ================ HEADER ================ -->
         <header>
-            A dead simple, responsive boilerplate.
         </header>
+        <!-- ================ MAIN ================ -->
+        <main class="container-fluid">
+            <!-- ================ HOME ================ -->
+            <section id="home" class="no-fluid row align-items-center">
+                <div class="col-12">
+                    <img class="responsive" src="public/img/typography_placeholder.png" alt="Hi, My Name is Dee Reddy">
+                </div>
+            </section> <!-- /#home -->
+
+            <!-- ================ ABOUT ================ -->
+            <section id="about" class="row">
+                <div class="col-12 text-center">
+                    ABOUT
+                </div>
+            </section> <!-- /#about -->
+
+            <!-- ================ PORTFOLIO ================ -->
+            <section id="portfolio" class="row">
+                <div class="col-12 text-center">
+                    PORTFOLIO
+                </div>
+            </section> <!-- /#portfolio -->
+
+            <!-- ================ CONTACT ================ -->
+            <section id="contact" class="row">
+                <div class="col-12 text-center">
+                    CONTACT
+                </div>
+            </section> <!-- /#contact -->
+        </main> <!-- /#container-fluid -->
+
 
     </div> <!-- /#boddy-wrapper -->
+    <!-- ================ FOOTER ================ -->
     <footer>
-
+        Footer
     </footer>
 </body>
 </html>
